# lc3-vm

./: .gitignore  README.md  pyproject.toml
src/: asm.py  lc3.py  opcodes.py  utils.py
